<resources>
    <string name="app_name">ProyectoReservas</string>
    <string name="email">Correo</string>
    <string name="write_email">Escribe tu email</string>
    <string name="password">Contraseña</string>
    <string name="write_password">Escribe tu contraseña</string>
    <string name="access">Acceder</string>
    <string name="register">Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="required">Requerido</string>
    <string name="save">Guardar</string>
    <string name="add_cita">Añadir Cita</string>
    <string name="logout">Salir</string>
    <string name="about">Acerca de</string>
    <string name="my_dates">Mis citas</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="home">home</string>
    <string name="add">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="citas">Mis Citas</string>
    <string name="peluqueria">Peluqueria</string>
    <string name="user_name">Nombre del usuario</string>
    <string name="user_surname">Apellido del usuario</string>
    <string name="user_phone">Telefono del usuario</string>
    <string name="user_email">Correo del usuario</string>
    <string name="user_password">Contraseña del usuario</string>
    <string name="cita_hour">Cita Hora</string>
    <string name="cita_day">Cita Día</string>
    <string name="admin_pelu">Administración Peluquer@s</string>
    <string name="add_pelu">Añadir Peluquer@</string>
    <string name="name_pelu">Nombre Peluquer@</string>
    <string name="email_pelu">Email Peluquer@</string>
    <string name="phone_pelu">Teléfono Peluquer@</string>

    <!-- Nombre de las peluqueras que hay -->
    <string-array name="peluqueras">
        <item>Macarena</item>
        <item>Carla</item>
        <item>Mario</item>
        <item>Donna</item>
        <item>Alexis</item>
    </string-array>

    <!-- Horas de cita que puede haber -->
    <string-array name="horas">
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
    </string-array>
</resources>